--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </div>
 <div id="output">
     <p id="outText">Output</p>
+    <P ID="outText2">Output2</P>
 </div>
 <div>
     <p id="error">Errori</p>
