--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="utf-8">
-    <title>Coding&Color - 4AI</title>
+    <title>Coding&Color - 4BINF</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -20,14 +20,14 @@
     <input id="inText" placeholder="inserisci un testo">
     <br><br>
     <button type="button" id="btnElabora" onclick="elabora()">Elabora</button>
-    <button type="button" id="btnCancella" onclick="reset()">Cancella</button>
+    <button type="button" id="btnCancella" onclick="reset()">Pulisci</button>
 </div>
 <div id="output">
-    <p id="outText">Output</p>
-    <P ID="outText2">Output2</P>
+    <p id="outText"></p>
+    <P ID="outText2"></P>
 </div>
 <div>
-    <p id="error">Errori</p>
+    <p id="error"></p>
 </div>
 <script src="script.js"></script>
 </body>
